@@ -1,6 +1,8 @@
 Version 0.9:
 
 	* Rewrite everything with Java generics to remove all the warnings
+	* Add split-tie procedures (only works for 2-way split-tie in
+	  all-play-all pairs or individual events)
 
 Version 0.8:
 	
